k8s/archive/web-argo-tunnel-ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: web-argo-tunnel-ingress-service
    namespace: web
    annotations:
        kubernetes.io/ingress.class: argo-tunnel
    labels:
        ingress: argo-tunnel
spec:
    tls:
        - hosts:
              - tunnel.mengxin.ml
          secretName: mengxin-ml-argo-tunnel-cert
    rules:
        - host: tunnel.mengxin.ml
          http:
              paths:
                  - path: /
                    backend:
                        serviceName: tunnel-mengxin-ml-clusterip
                        servicePort: 80
